--- a/src/components/Button.css
+++ b/src/components/Button.css
@@ -1,24 +1,25 @@
 button {
     width: 250px;
     height: 80px;
-    font-size: 35px;
+    font-size: 27px;
     font-family: Roboto, sans-serif;
     font-weight: bold;
-    color: white;
-    border: 2px solid black;
+    color: black;
+    border: 1px solid black;
     border-radius: 15px;
     margin: 5px;
     cursor: pointer;
 }
 
 button:hover {
-    background-color: aqua;
+    background-color: rgb(205, 209, 152);
 }
 
 .clickbutton {
-    background-color:blue;
+    background-color:rgb(209, 185, 119);
 }
 
+
 .restartbutton {
-    background-color: blueviolet;
+    background-color: rgb(143, 125, 75);
 }
